<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="jschdeveloper.com.sendmyphoto.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editAsunto"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorAccent"
                    android:drawableLeft="@android:drawable/ic_menu_send"
                    android:hint="Asunto del correo"></EditText>

                <Button
                    android:id="@+id/btnClear"
                    android:layout_width="40dip"
                    android:layout_height="40dip"
                    android:layout_gravity="right|bottom"
                    android:layout_marginBottom="5dip"
                    android:background="@android:drawable/ic_delete"
                    android:backgroundTint="@color/colorAccent"
                    android:onClick="clear" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linCamara"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/btnFoto"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:layout_alignParentLeft="true"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    app:materialIcon="camera"
                    app:materialIconColor="@color/colorAccent"
                    app:materialIconSize="64dp" />


                <TextView
                    android:id="@+id/txtFoto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingTop="2dp"
                    android:text="@string/txt_camara"
                    android:textColor="@color/primary_dark"
                    android:textSize="24sp" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/linVideo"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/btnVideo"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    android:text="@string/txt_video"
                    app:materialIconColor="@color/colorAccent"
                    app:materialIconSize="64dp" />

                <TextView
                    android:id="@+id/txtVideo"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingTop="2dp"
                    android:text="Video"
                    android:textColor="@color/primary_dark"
                    android:textSize="24sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linAjustes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">

                <net.steamcrafted.materialiconlib.MaterialIconView
                    android:id="@+id/btnAjustes"
                    android:layout_width="70dip"
                    android:layout_height="70dip"
                    android:layout_gravity="center"
                    android:scaleType="center"
                    app:materialIcon="account_circle"
                    app:materialIconColor="@color/colorAccent"
                    app:materialIconSize="64dp" />

                <TextView
                    android:id="@+id/txtAjustes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:paddingTop="2dp"
                    android:text="@string/txt_ajustes"
                    android:textColor="@color/primary_dark"
                    android:textSize="24sp" />


            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>